--- a/indess.html
+++ b/indess.html
@@ -3278,11 +3278,11 @@
                     </ul>
                     <style>  
                         .fb-blue {  
-                            background-color: #3399FF;  
+                            background-color: #e2cef1;  
                         }  
                     
                         .card-text {  
-                            background-color: #3399FF;  
+                            background-color: #e2cef;  
                             color: white; /* This will ensure the text is readable against the blue background */  
                             padding: 10px; /* Optional: Adds some spacing around the text */  
                         }  
