--- a/indess.html
+++ b/indess.html
@@ -3284,12 +3284,12 @@
                         .card-text {  
                             background-color: #e2cef;  
                             color: white; /* This will ensure the text is readable against the blue background */  
-                            padding: 10px; /* Optional: Adds some spacing around the text */  
+                            padding: 20px; /* Optional: Adds some spacing around the text */  
                         }  
                     
                         .button {  
                             background-color: #3399FF;  
-                            color: white;  
+                            color: rgb(0, 0, 0);  
                             padding: 10px 20px;  
                             text-align: center;  
                             cursor: pointer;  
